Use only job info to trigger shotwise output behaviour. Fix and extend tests.
Signed-off-by: Spencer Churchill <25377399+splch@users.noreply.github.com>

--- a/runtime/cudaq/platform/default/rest/helpers/ionq/ionq.yml
+++ b/runtime/cudaq/platform/default/rest/helpers/ionq/ionq.yml
@@ -41,10 +41,15 @@ target-arguments:
   - key: debias
     required: false
     type: string
-    platform-arg: debias 
+    platform-arg: debias
     help-string: "Specify debiasing."
   - key: sharpen
     required: false
     type: string
     platform-arg: sharpen
     help-string: "Specify sharpening."
+  - key: memory
+    required: false
+    type: boolean
+    platform-arg: memory
+    help-string: "When `true`, returns sequential data for QPU or noisy simulation runs."
