Expose the memory argument for C++ users.
Signed-off-by: Spencer Churchill <25377399+splch@users.noreply.github.com>

--- a/runtime/cudaq/platform/default/rest/helpers/ionq/ionq.yml
+++ b/runtime/cudaq/platform/default/rest/helpers/ionq/ionq.yml
@@ -50,6 +50,6 @@ target-arguments:
     help-string: "Specify sharpening."
   - key: memory
     required: false
-    type: boolean
+    type: string
     platform-arg: memory
-    help-string: "When `true`, returns sequential data for QPU or noisy simulation runs."
+    help-string: "When `true`, returns sequential data for QPU or noisy simulation runs. Default is `true`."
