[PTSBE] Decouple PTSBE support for sample from cudaq::sample to cudaq::ptsbe::sample (#3914)
<!--
Thanks for helping us improve CUDA-Q!

⚠️ The pull request title should be concise and understandable for all.
⚠️ If your pull request fixes an open issue, please link to the issue.

Checklist:
- [ ] I have added tests to cover my changes.
- [ ] I have updated the documentation accordingly.
- [ ] I have read the CONTRIBUTING document.
-->

### Description
Part 1./2. of the successor to #3902. This PR decouples PTSBE from the
standard Cuda-Q sampling infrastructure. We treat it as a completely
separate execution pathway through Cuda-Q. This mirrors
async/broadcasting support for cpp/python.

This PR also fixed a bug in the generation of noisy unitary gates. Now
we use the noise channel directly indexing into the corresponding
operation. This allows us to work with any type of unitary noise (we
should probably fix the enum for noise point to an integer in a follow
up PR).

---------

Signed-off-by: Thomas Alexander <talexander@nvidia.com>
Co-authored-by: Sachin Pisal <spisal@nvidia.com>

--- a/runtime/cudaq/CMakeLists.txt
+++ b/runtime/cudaq/CMakeLists.txt
@@ -29,7 +29,8 @@ add_library(${LIBRARY_NAME}
     qis/state.cpp
     utils/cudaq_utils.cpp
     distributed/mpi_plugin.cpp
-    ptsbe/PTSBESampleIntegration.cpp
+    ptsbe/PTSBESample.cpp
+    ptsbe/PTSBESampleResult.cpp
     ptsbe/PTSBESampler.cpp
     ptsbe/ShotAllocationStrategy.cpp
     ptsbe/TrajectoryDeduplication.cpp
