--- a/runtime/cudaq/ptsbe/CMakeLists.txt
+++ b/runtime/cudaq/ptsbe/CMakeLists.txt
@@ -12,7 +12,8 @@
 
 # Source files
 set(PTSBE_SOURCES
-    PTSBESampleIntegration.cpp
+    PTSBESample.cpp
+    PTSBESampleResult.cpp
     PTSBESampler.cpp
     ShotAllocationStrategy.cpp
     TrajectoryDeduplication.cpp
@@ -30,7 +31,8 @@ install(FILES
     TrajectoryDeduplication.h
     PTSBEOptions.h
     PTSBESampler.h
-    PTSBESampleIntegration.h
+    PTSBESampleResult.h
+    PTSBESample.h
     ShotAllocationStrategy.h
     PTSSamplingStrategy.h
     NoiseExtractor.h
