Introducing type erased jit engine
Signed-off-by: Renaud Kauffmann <rkauffmann@nvidia.com>

--- a/python/extension/CMakeLists.txt
+++ b/python/extension/CMakeLists.txt
@@ -88,6 +88,7 @@ declare_mlir_python_extension(CUDAQuantumPythonSources.Extension
     ../../runtime/common/LayoutInfo.cpp
     ../../runtime/common/RuntimeMLIR.cpp
     ../../runtime/common/RuntimePyMLIR.cpp
+    ../../runtime/common/JIT.cpp
     ../../runtime/cudaq/platform/default/rest_server/RemoteRuntimeClient.cpp
     ../../runtime/cudaq/platform/orca/OrcaExecutor.cpp
     ../../runtime/cudaq/platform/orca/OrcaQPU.cpp
