Refactoring the lowerQuakeCode out of the QPU
Signed-off-by: Renaud Kauffmann <rkauffmann@nvidia.com>

--- a/runtime/common/CMakeLists.txt
+++ b/runtime/common/CMakeLists.txt
@@ -108,6 +108,7 @@ add_library(cudaq-mlir-runtime
   SHARED
     ArgumentConversion.cpp
     CodeGenConfig.cpp
+    Compiler.cpp
     Environment.cpp
     JIT.cpp
     RuntimeMLIR.cpp
@@ -149,6 +150,7 @@ target_link_libraries(cudaq-mlir-runtime
     MLIRLLVMCommonConversion
     MLIRLLVMToLLVMIRTranslation
   PRIVATE
+    CUDAQTargetConfigUtil
     cudaq-logger
 )
 
