--- a/unittests/backends/CMakeLists.txt
+++ b/unittests/backends/CMakeLists.txt
@@ -92,6 +92,7 @@ if (OPENSSL_FOUND AND CUDAQ_ENABLE_PYTHON AND CUDAQ_TEST_MOCK_SERVERS)
     add_subdirectory(quantum_machines)
   endif()
   add_subdirectory(extra_payload_provider)
+  add_subdirectory(quake_backend)
 endif()
 add_subdirectory(pasqal)
 add_subdirectory(qpp_observe)
