feat(scaleway): update mock

--- a/unittests/backends/scaleway/CMakeLists.txt
+++ b/unittests/backends/scaleway/CMakeLists.txt
@@ -6,9 +6,11 @@
 # the terms of the Apache License 2.0 which accompanies this distribution.     #
 # ============================================================================ #
 
-add_backend_unittest_executable(test_scaleway 
+add_backend_unittest_executable(test_scaleway
   SOURCES ScalewayTester.cpp
-  BACKEND scaleway)
+  BACKEND scaleway
+  BACKEND_CONFIG "scaleway url=http://localhost:62450"
+)
 
 configure_file("ScalewayStartServerAndTest.sh.in" "${CMAKE_BINARY_DIR}/unittests/backends/scaleway/ScalewayStartServerAndTest.sh" @ONLY)
 add_test(NAME scaleway-tests COMMAND bash ScalewayStartServerAndTest.sh WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/unittests/backends/scaleway/)
