Update the doc and lib name
Signed-off-by: Thien Nguyen <thiennguyen@nvidia.com>

--- a/realtime/CMakeLists.txt
+++ b/realtime/CMakeLists.txt
@@ -17,15 +17,15 @@ set(CMAKE_BUILD_TYPE "Release" CACHE STRING
     "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel")
 
 # Set a default install prefix if none was specified.
-set(CMAKE_INSTALL_PREFIX "$ENV{HOME}/.nvqlink" CACHE STRING
+set(CMAKE_INSTALL_PREFIX "$ENV{HOME}/.cudaq_realtime" CACHE STRING
     "Install path prefix, prepended onto install directories")
 
 # Project setup
 # ==============================================================================
 
 # Check if core is built as a standalone project.
-project(cudaq-nvqlink)
-set(CUDAQ_NVQLINK_STANDALONE_BUILD TRUE)
+project(cudaq-realtime)
+set(CUDAQ_REALTIME_STANDALONE_BUILD TRUE)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -34,8 +34,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
 
-set(CUDAQ_NVQLINK_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR})
-set(CUDAQ_NVQLINK_INCLUDE_DIR ${CUDAQ_NVQLINK_SOURCE_DIR}/include)
+set(CUDAQ_REALTIME_SOURCE_DIR  ${CMAKE_CURRENT_SOURCE_DIR})
+set(CUDAQ_REALTIME_INCLUDE_DIR ${CUDAQ_REALTIME_SOURCE_DIR}/include)
 
 # Add cmake directory to module path for custom Find modules
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -43,10 +43,10 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # Options
 # ==============================================================================
 
-option(NVQLINK_BUILD_TESTS
-       "Generate build targets for the NVQLINK unit tests" ON)
-option(NVQLINK_BUILD_EXAMPLES
-       "Generate build targets for the NVQLINK example programs" ON)
+option(CUDAQ_REALTIME_BUILD_TESTS
+       "Generate build targets for the CUDAQ real-time unit tests" ON)
+option(CUDAQ_REALTIME_BUILD_EXAMPLES
+       "Generate build targets for the CUDAQ real-time example programs" ON)
 option(CUDAQ_REALTIME_ENABLE_HOLOLINK_TOOLS
        "Build Hololink bridge/emulator/playback tools (requires hololink)."
        OFF)
@@ -97,19 +97,19 @@ find_package(Threads REQUIRED)
 
 add_subdirectory(lib)
 
-if (NVQLINK_BUILD_EXAMPLES)
+if (CUDAQ_REALTIME_BUILD_EXAMPLES)
   message(STATUS "RoCE/DOCA examples removed for RPC dispatch workflow.")
 endif()
 
-if (NVQLINK_BUILD_TESTS)
-  add_custom_target(NVQLINKUnitTests)
+if (CUDAQ_REALTIME_BUILD_TESTS)
+  add_custom_target(CudaqRealtimeUnitTests)
   include(CTest)
 
   add_custom_target(run_tests
     COMMAND ${CMAKE_COMMAND} -E env 
             PYTHONPATH="${CUDAQ_INSTALL_DIR}:${CMAKE_BINARY_DIR}/python"
             ${CMAKE_CTEST_COMMAND} --output-on-failure
-    DEPENDS NVQLINKUnitTests
+    DEPENDS CudaqRealtimeUnitTests
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
   )
   add_subdirectory(unittests)
