Fix rpath issue found in macos install resulting in non-transportable wheels. Now delocate works without warnings (which makes sense). Fix up some of the build/validation to be more robust to contamination.
Signed-off-by: Thomas Alexander <talexander@nvidia.com>

--- a/runtime/cudaq/distributed/builtin/CMakeLists.txt
+++ b/runtime/cudaq/distributed/builtin/CMakeLists.txt
@@ -9,7 +9,11 @@
 if (MPI_CXX_FOUND)
     message(STATUS "Building default MPI Comm plugin")
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/plugins)
-    set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/..")
+    if(APPLE)
+      set(CMAKE_INSTALL_RPATH "@loader_path;@loader_path/..")
+    else()
+      set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/..")
+    endif()
     # IMPORTANT: Don't change this lib name without updating the getMpiPlugin function
     set(LIBRARY_NAME cudaq-comm-plugin)
     add_library(${LIBRARY_NAME} SHARED mpi_comm_impl.cpp)
