--- a/.github/workflows/docker_images.yml
+++ b/.github/workflows/docker_images.yml
@@ -330,6 +330,23 @@ jobs:
         with:
           enable-apt: true
 
+      - name: Set up ccache and ORAS
+        uses: ./.github/actions/ccache-setup
+
+      - name: Compute cache metadata
+        id: cache_meta
+        run: |
+          pr_number=$(echo "${{ github.ref_name }}" | grep pull-request/ | grep -o '[0-9]*' || true)
+          pr_number=${pr_number:-${{ github.event.pull_request.number }}}
+          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
+
+      - name: Restore ccache from GHCR
+        uses: ./.github/actions/ccache-restore
+        with:
+          cache-key: ${{ needs.metadata.outputs.platform_tag }}-cudaqdev
+          registry-token: ${{ github.token }}
+          pr-number: ${{ steps.cache_meta.outputs.pr_number }}
+
       - name: Extract metadata
         id: metadata
         uses: docker/metadata-action@v5
@@ -347,6 +364,8 @@ jobs:
         with:
           context: .
           file: ./docker/build/cudaq.dev.Dockerfile
+          build-contexts: |
+            ccache-data=/tmp/ccache-data
           build-args: |
             base_image=${{ steps.prereqs.outputs.base_image }}
             install="CMAKE_BUILD_TYPE=Debug"
@@ -356,6 +375,25 @@ jobs:
           platforms: ${{ inputs.platforms }}
           push: ${{ inputs.environment != '' }}
           outputs: ${{ steps.prereqs.outputs.docker_output }}
+
+      - name: Extract ccache from image
+        run: |
+          container_id=$(docker create "${{ steps.metadata.outputs.tags }}" 2>/dev/null) || true
+          if [ -z "$container_id" ]; then
+            echo "Could not create container; skipping ccache extraction."
+            exit 0
+          fi
+          mkdir -p /tmp/ccache-out
+          docker cp $container_id:/root/.ccache /tmp/ccache-out/ 2>/dev/null || true
+          docker rm $container_id
+
+      - name: Push ccache to GHCR
+        uses: ./.github/actions/ccache-push
+        with:
+          cache-key: ${{ needs.metadata.outputs.platform_tag }}-cudaqdev
+          cache-path: /tmp/ccache-out/.ccache
+          registry-token: ${{ github.token }}
+          pr-number: ${{ steps.cache_meta.outputs.pr_number }}
 
       - name: Write matrix outputs
         uses: cloudposse/github-action-matrix-outputs-write@1.0.0
@@ -555,6 +593,23 @@ jobs:
         with:
           enable-apt: true
 
+      - name: Set up ccache and ORAS
+        uses: ./.github/actions/ccache-setup
+
+      - name: Compute cache metadata
+        id: cache_meta
+        run: |
+          pr_number=$(echo "${{ github.ref_name }}" | grep pull-request/ | grep -o '[0-9]*' || true)
+          pr_number=${pr_number:-${{ github.event.pull_request.number }}}
+          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
+
+      - name: Restore ccache from GHCR
+        uses: ./.github/actions/ccache-restore
+        with:
+          cache-key: ${{ needs.metadata.outputs.platform_tag }}-cudaq-release
+          registry-token: ${{ github.token }}
+          pr-number: ${{ steps.cache_meta.outputs.pr_number }}
+
       - name: Extract cuda-quantum-dev metadata
         id: cudaqdev_metadata
         uses: docker/metadata-action@v5
@@ -575,6 +630,8 @@ jobs:
         with:
           context: .
           file: ./docker/build/cudaq.dev.Dockerfile
+          build-contexts: |
+            ccache-data=/tmp/ccache-data
           build-args: |
             base_image=${{ steps.prereqs.outputs.devdeps_image }}
             install="CMAKE_BUILD_TYPE=Release CUDA_QUANTUM_VERSION=${{ steps.prereqs.outputs.image_tag }}"
