--- a/.github/workflows/test_in_devenv.yml
+++ b/.github/workflows/test_in_devenv.yml
@@ -55,21 +55,17 @@ jobs:
       - name: Set up ccache and ORAS
         uses: ./.github/actions/ccache-setup
 
-      - name: Compute cache metadata
-        id: cache_meta
+      - name: Compute platform ID
+        id: platform_meta
         run: |
           platform_id=$(echo "${{ inputs.platform }}" | sed 's/linux\///g' | tr -d ' ')
-          pr_number=$(echo "${{ github.ref_name }}" | grep pull-request/ | grep -o '[0-9]*' || true)
-          pr_number=${pr_number:-${{ github.event.pull_request.number }}}
           echo "platform_id=$platform_id" >> $GITHUB_OUTPUT
-          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
 
       - name: Restore ccache from GHCR
         uses: ./.github/actions/ccache-restore
         with:
-          cache-key: ${{ steps.cache_meta.outputs.platform_id }}-devenv
+          cache-key: ${{ steps.platform_meta.outputs.platform_id }}-devenv
           registry-token: ${{ github.token }}
-          pr-number: ${{ steps.cache_meta.outputs.pr_number }}
 
       - name: Set up context for buildx
         run: |
@@ -109,19 +105,16 @@ jobs:
             --build-arg mpi="${{ inputs.mpi }}"
 
       - name: Extract ccache from image
-        run: |
-          container_id=$(docker create cuda-quantum-dev:local)
-          mkdir -p /tmp/ccache-out
-          docker cp $container_id:/root/.ccache /tmp/ccache-out/ 2>/dev/null || true
-          docker rm $container_id
+        uses: ./.github/actions/ccache-extract-docker
+        with:
+          image: cuda-quantum-dev:local
 
       - name: Push ccache to GHCR
         uses: ./.github/actions/ccache-push
         with:
-          cache-key: ${{ steps.cache_meta.outputs.platform_id }}-devenv
+          cache-key: ${{ steps.platform_meta.outputs.platform_id }}-devenv
           cache-path: /tmp/ccache-out/.ccache
           registry-token: ${{ github.token }}
-          pr-number: ${{ steps.cache_meta.outputs.pr_number }}
 
       - name: Test CUDA Quantum
         uses: ./.github/actions/run-in-docker
@@ -217,21 +210,17 @@ jobs:
       - name: Set up ccache and ORAS
         uses: ./.github/actions/ccache-setup
 
-      - name: Compute cache metadata
-        id: cache_meta
+      - name: Compute platform ID
+        id: platform_meta
         run: |
           platform_id=$(echo "${{ inputs.platform }}" | sed 's/linux\///g' | tr -d ' ')
-          pr_number=$(echo "${{ github.ref_name }}" | grep pull-request/ | grep -o '[0-9]*' || true)
-          pr_number=${pr_number:-${{ github.event.pull_request.number }}}
           echo "platform_id=$platform_id" >> $GITHUB_OUTPUT
-          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
 
       - name: Restore ccache from GHCR
         uses: ./.github/actions/ccache-restore
         with:
-          cache-key: ${{ steps.cache_meta.outputs.platform_id }}-devenv-python
+          cache-key: ${{ steps.platform_meta.outputs.platform_id }}-devenv-python
           registry-token: ${{ github.token }}
-          pr-number: ${{ steps.cache_meta.outputs.pr_number }}
 
       - name: Set up context for buildx
         run: |
@@ -323,20 +312,18 @@ jobs:
               exit 1
             fi
 
-      - name: Extract ccache from image
-        run: |
-          container_id=$(docker create dev_env:local)
-          mkdir -p /tmp/ccache-out
-          docker cp $container_id:/root/.ccache /tmp/ccache-out/ 2>/dev/null || true
-          docker rm $container_id
+      - name: Extract ccache from container
+        uses: ./.github/actions/ccache-extract-docker
+        with:
+          image: dev_env:local
+          from-container: 'true'
 
       - name: Push ccache to GHCR
         uses: ./.github/actions/ccache-push
         with:
-          cache-key: ${{ steps.cache_meta.outputs.platform_id }}-devenv-python
+          cache-key: ${{ steps.platform_meta.outputs.platform_id }}-devenv-python
           cache-path: /tmp/ccache-out/.ccache
           registry-token: ${{ github.token }}
-          pr-number: ${{ steps.cache_meta.outputs.pr_number }}
 
       - name: Save environment
         id: env_save
