--- a/.github/actions/ccache-setup/action.yml
+++ b/.github/actions/ccache-setup/action.yml
@@ -35,15 +35,11 @@ runs:
           if [ "$(uname)" = "Darwin" ]; then
             brew install ccache
           else
-            echo "ccache not found; skipping configuration (expected inside Docker image)."
-            exit 0
+            sudo apt-get update -qq && sudo apt-get install -y --no-install-recommends ccache
           fi
         fi
         ccache --set-config=max_size=${{ inputs.max-size }}
         ccache --set-config=compression=${{ inputs.compression }}
-        # Pin cache_dir to ~/.ccache so all actions use a consistent path.
-        # ccache 4.x defaults to platform-specific dirs (e.g.
-        # ~/Library/Caches/ccache on macOS, ~/.cache/ccache on Linux).
         ccache --set-config=cache_dir="$HOME/.ccache"
         echo "CCACHE_DIR=$HOME/.ccache" >> $GITHUB_ENV
         ccache -z
